# otaniemipeli

./: .dockerignore  .gitignore  .prettierignore  .sample.env  CLAUDE.md  README.md  docker-compose-prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  prettierrc.json
.github/workflows/: build.yml
otaniemipeli-backend-rs/: .gitignore  compose.yaml  prettierrc.json
otaniemipeli-backend-rs/migrations/: V1__setup.sql  V8__edit_turns_table.sql  V9__add_game_visited_places.sql
otaniemipeli-backend-rs/src/api/secretary/: mod.rs
otaniemipeli-backend-rs/src/api/v1/ingredients/: utils.rs
otaniemipeli-backend-rs/src/database/: mod.rs
otaniemipeli-backend-rs/src/utils/: types.rs
scripts/: analysis.py  game_data.json  generatePYclasses.py  generateTStypes.py  pyproject.toml  requirements.txt  rust_types.py  simulateTurns.py
